kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: csharp-host
    tier: Service
  name: csharp-host
  namespace: services
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: csharp-host
  sessionAffinity: None
  type: ClusterIP
