kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-csharp-host
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - echo1.net
    secretName: echo-tls
  rules:
  - host: echo1.net
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
